syntax = "proto3";

package auth;

option go_package = "proto/authpb";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool    is_valid = 1;
  string  user_id = 2;
  string  username = 3;
  string  email = 4;
  string  role = 5;
}
